--- a/graphql-api/tsconfig.json
+++ b/graphql-api/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "rootDirs": ["src"],
+    "rootDirs": ["api"],
     "outDir": "dist",
     "lib": ["es2020"],
     "target": "es2020",
