--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "tsc",
     "start": "npm run compile && node ./dist/index.js",
-    "dev": "nodemon api/src/index.ts",
+    "dev": "nodemon api/index.ts",
     "vercel-build": "echo hello"
   },
   "keywords": [],
