updated dotenv in package.json

--- a/graphql-api/package.json
+++ b/graphql-api/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "mongoose": "^7.6.3"
